use java 11 syntax, no toList()